--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -60,13 +60,17 @@
       .g_id_signin {
         transform: scale(0.6);
         transform-origin: right center;
-        margin-left: 4px;
+        margin-left: auto;
         display: flex;
         align-items: center;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%) scale(0.6);
       }
 
       .feedback {
-        padding: 1px 2px;
+        padding: 0 2px;
         font-size: 8px;
         white-space: nowrap;
         display: flex;
