--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -53,7 +53,7 @@
         align-items: center;
         flex-wrap: nowrap;
         justify-content: flex-end;
-        width: auto;
+        width: 100%;
         height: 100%;
       }
   
@@ -67,7 +67,7 @@
         /*position: absolute;
         right: 0;
         top: 0; /* Change from 50% to 0 */
-        transform: translateY(0) scale(0.6); /* Remove translateY */
+        /*transform: translateY(0) scale(0.6); /* Remove translateY */
       }
 
       .feedback {
