--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -64,6 +64,7 @@
         margin-left: auto;
         display: flex;
         align-items: center;
+        top: 0;
         /*position: absolute;
         right: 0;
         top: 0; /* Change from 50% to 0 */
