--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -64,9 +64,8 @@
         margin-left: auto;
         display: flex;
         align-items: center;
-        /*position: absolute;
-        right: 0;
-        top: 0; /* Change from 50% to 0 */
+        top: 0;
+
         transform: translateY(0) scale(0.6); /* Remove translateY */
       }
 
@@ -76,6 +75,7 @@
         white-space: nowrap;
         display: flex;
         align-items: center;
+        top: 0;
         /*position: absolute; 
         top: 0;*/
       }
