--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -59,12 +59,12 @@
   
       /* Add styling for Google sign-in button */
       .g_id_signin {
-        transform: scale(0.6);
+        width: 150px;
+        height: 50px;
         transform-origin: right center;
         display: flex;
         align-items: center;
         top: 0;
-        transform: translateY(0) scale(0.6); /* Remove translateY */
       }
 
       .feedback {
@@ -74,8 +74,6 @@
         display: flex;
         align-items: center;
         top: 0;
-        /*position: absolute; 
-        top: 0;*/
       }
   
       .meals-container {
