--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -59,8 +59,9 @@
   
       /* Add styling for Google sign-in button */
       .g_id_signin {
-        width: 60px;
-        height: 20px;
+        transform: translateY(0) scale(0.6);
+        width: 120px;
+        height: 40px;
         transform-origin: right center;
         display: flex;
         align-items: center;
