--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -55,6 +55,7 @@
         justify-content: flex-end;
         width: 100%;
         height: 100%;
+        margin-top: -8px; /* Add negative margin to move elements up */
       }
   
       /* Add styling for Google sign-in button */
