--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,10 @@
           <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
             Feedback
           </a>
-          <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          <div class="g_id_signin-container">
+            <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          </div>
+          </div>
           <div id="profile-menu" class="profile-menu" style="display: none;">
             <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
