--- a/templates/index.html
+++ b/templates/index.html
@@ -51,21 +51,18 @@
             &lt; Lion Dine
           </a>
         </div>
-        <div class="top-right">
-          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
-            Feedback
-          </a>
-          <div class="g_id_signin-container">
+          <div class="top-right">
+            <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
+              <div class="feedback">Feedback</div>
+            </a>
             <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
-          </div>
-          </div>
-          <div id="profile-menu" class="profile-menu" style="display: none;">
-            <img id="profile-icon" src="" alt="Profile" />
-            <div id="profile-dropdown" class="profile-dropdown">
-              <a href="/profile"><button>Profile</button></a>
-              <button onclick="handleSignOut()">Sign Out</button>
+            <div id="profile-menu" class="profile-menu">
+              <img id="profile-icon" src="" alt="Profile" />
+              <div id="profile-dropdown" class="profile-dropdown">
+                <a href="/profile"><button>Profile</button></a>
+                <button onclick="handleSignOut()">Sign Out</button>
+              </div>
             </div>
-          </div>
         </div>
       </div>
       <header class="header" id="index-header">
