--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -39,13 +39,14 @@
         position: static;
         z-index: 1000;
       }
-
+      /*
       .top-left {
         font-size: 10px;
         display: flex;
+        align-items: start;
         align-items: center;
         gap: 6px;
-      }
+      }*/
 
       /* Add specific style for current-time div */
       #current-time {
@@ -55,7 +56,6 @@
       .top-right {
         font-size: 10px;
         display: flex;
-        flex-direction: row-reverse;
         align-items: center;
         flex-wrap: nowrap;
         justify-content: flex-end;
