profile html setup seemed best

--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -98,14 +98,13 @@
           <a href="/">&lt; Swipe Market</a>
         </div>
         <div class="top-right">
-          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
-            <div class="feedback">Feedback</div>
+          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
+            Feedback
           </a>
           <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
-              <a href="/profile"><button>Profile</button></a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
