--- a/templates/index.html
+++ b/templates/index.html
@@ -47,22 +47,19 @@
       <div class="top">
         <div class="top-left">
           <div id="current-time"></div>
-          <a href="https://liondine.com/" target="_blank">
-            &lt; Lion Dine
-          </a>
+          <a href="https://liondine.com">&lt; Lion Dine</a>
         </div>
-          <div class="top-right">
-            <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank">
-              <div class="feedback">Feedback</div>
-            </a>
-            <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
-            <div id="profile-menu" class="profile-menu">
-              <img id="profile-icon" src="" alt="Profile" />
-              <div id="profile-dropdown" class="profile-dropdown">
-                <a href="/profile"><button>Profile</button></a>
-                <button onclick="handleSignOut()">Sign Out</button>
-              </div>
+        <div class="top-right">
+          <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
+            Feedback
+          </a>
+          <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          <div id="profile-menu" class="profile-menu">
+            <img id="profile-icon" src="" alt="Profile" />
+            <div id="profile-dropdown" class="profile-dropdown">
+              <button onclick="handleSignOut()">Sign Out</button>
             </div>
+          </div>
         </div>
       </div>
       <header class="header" id="index-header">
