--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -105,6 +105,7 @@
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
+                <a href="/profile"><button>Profile</button></a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
