--- a/templates/index.html
+++ b/templates/index.html
@@ -55,8 +55,9 @@
           </a>
           <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
           <div id="profile-menu" class="profile-menu">
-            <img id="profile-icon" src="" alt="Profile" />
+            <img id="profile-icon" src="" alt="Profile"/>
             <div id="profile-dropdown" class="profile-dropdown">
+              <a href="/profile"><button>Profile</button></a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
