--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -55,7 +55,7 @@
         font-size: 10px;
         align-items: center;
         position: relative;
-        gap: 6px;
+        /*gap: 6px;*/
       }
 
       .g_id_signin {
@@ -66,14 +66,10 @@
         top: 0;
         margin-top: 0;
       }
-      
+
       .feedback {
         padding: 4px 8px;
-        font-size: 10px;
-        white-space: nowrap;
-        display: flex;
-        align-items: center;
-        margin-top: 0;
+        font-size: 10px;        
         height: 24px;
         box-sizing: border-box;
       }
