--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
       <header class="header" id="index-header">
         <a href="/">Swipe Market &#128722;</a> 
       </header>
+      <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
         <a href="/listings">
           <button type="button" class="sell-button" id="postListingsButton">Create a New Listing</button>
@@ -75,11 +76,28 @@
       <div class="how-it-works-popup" id="howItWorksPopup">
         <div class="how-it-works-content">
           <p style="line-height: 1.6; text-align: justify;">
-            Swipe Market lets students pay other students to swipe them 
-            into Columbia and Barnard dining halls. Fill out our "Create a New Listing" form to let other students contact you, or hit the contact 
-            button on a listing below to have an email sent to both you and the 
-            listing's owner. Once we put you in touch with your buyer/seller, 
-            it's up to you to coordinate a meeting and exchange payment details.
+            <p>
+              Swipe Market is an online marketplace that connects students 
+              who want to sell meal swipes with students who want to buy them. 
+            </p>
+            <ul>
+              <li>
+                Option 1: fill out the "create a new listing" form to add 
+                details about a swipe you're looking to buy or sell. This 
+                will add a new entry to one of the tables below, and potential 
+                buyers/sellers will be able to contact you.
+              </li>
+              <li>
+                Option 2: if you see a swipe below that you'd like to buy 
+                or sell, click the "get this swipe" or "swipe them in" 
+                button to be automatically put in touch with the person who posted it.
+              </li>
+            </ul>
+            <p>
+              Once we send an email connecting you to your buyer/seller, 
+              it's up to you to coordinate a meeting and exchange payment 
+              details. Good luck!
+            </p>
           </p>
         </div>
       </div>
