--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -69,9 +69,10 @@
         transform: scale(0.6);
         transform-origin: right center;
         position: relative;
-        margin-left:auto;
         top: 0;
         margin-top: 0;
+        margin: 0 !important;
+        padding: 0 !important;
       }
 
       .feedback {
