--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -73,6 +73,9 @@
         margin-top: 0;
         margin: 0 !important;
         padding: 0 !important;
+      }
+
+      .signin-container {
         background-color: blue;
       }
 
