--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,10 @@
           <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
             Feedback
           </a>
-          <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          <div class="signin-container">
+            <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+            <!--<button id="google-signin-btn">Sign In</button>-->
+          </div>
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile"/>
             <div id="profile-dropdown" class="profile-dropdown">
