--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -66,7 +66,7 @@
       }
 
       .g_id_signin {
-        transform: scale(0.6);
+        /*transform: scale(0.6);*/
         transform-origin: right center;
         position: relative;
         top: 0;
