--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -53,8 +53,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-end; /* Aligns elements to the right */
-        width: 100%;
+        justify-content: flex-end;
         background-color: red;
         /*
         display: flex;
