--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,10 @@
           </a>
           <div class="signin-container">
             <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
-            <!--<button id="google-signin-btn">Sign In</button>-->
+            <!--<button id="custom-signin-btn" class="custom-signin-btn">
+              <i class="fab fa-google"></i>
+              Sign In with Google
+            </button>-->
           </div>
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile"/>
