--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -202,4 +202,14 @@
       .subheading {
         font-size: 12px;
       }
+
+      .custom-signin-btn {
+        font-size: 12px;
+        padding: 6px 12px;
+        margin-left: 6px;
+      }
+
+      .custom-signin-btn i {
+        font-size: 14px;
+      }
   }
