--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -73,8 +73,9 @@
         padding: 0 !important;
       }
 
-      .signin-container {
-        transform: scale(0.6);
+      .signin-container .g_id_signin {
+        font-size: 0.6rem;
+        padding: 4px 8px;
       }
 
       .feedback {
