--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -74,8 +74,10 @@
       }
 
       .signin-container .g_id_signin {
-        font-size: 0.6rem;
-        padding: 4px 8px;
+        /*font-size: 0.6rem;
+        padding: 4px 8px;*/
+        transform: scale(0.6);
+        width: 120px;
       }
 
       .feedback {
