--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -68,7 +68,7 @@
 
       .signin-container .g_id_signin {
         transform: scale(0.6) translateX(-4px);;
-        transform-origin: 0% 50%;
+        transform-origin: left top;
         width: 120px;
         font-size: 0.6rem;
         padding: 4px 8px;
