--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -79,6 +79,7 @@
         font-size: 10px;        
         height: 24px;
         box-sizing: border-box;
+        align-self: flex-start;
       }
   
       .meals-container {
