--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -329,6 +329,7 @@
     position: absolute;
     right: 0;
     margin-top: 10px;
+    text-align: left;
     background-color: #FFFFFF;
     min-width: 120px;
     z-index: 1;
