--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
         <a href="/listings">
-          <button type="button" class="sell-button" id="postListingsButton">Create a New Listing</button>
+          <button type="button" class="sell-button" id="postListingsButton">Post Listing</button>
         </a>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
       </div>
@@ -88,7 +88,7 @@
             </p>
             <ul>
               <li>
-                Option 1: fill out the "create a new listing" form to add 
+                Option 1: fill out the "post listing" form to add 
                 details about a swipe you're looking to buy or sell. This 
                 will add a new entry to one of the tables below, and potential 
                 buyers/sellers will be able to contact you.
@@ -109,7 +109,7 @@
       </div>
       <div class="tables-container">
       <table>
-        <caption>Get Swiped In</caption>
+        <caption>Get Swiped In</caption>   
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
