header on index/other html now aligned

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,23 +47,17 @@
       <div class="top">
         <div class="top-left">
           <div id="current-time"></div>
-          <a href="https://liondine.com">&lt; Lion Dine</a>
+          <a href="/">&lt; Swipe Market</a>
         </div>
         <div class="top-right">
           <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
             Feedback
           </a>
-          <div class="signin-container">
-            <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
-            <!--<button id="custom-signin-btn" class="custom-signin-btn">
-              <i class="fab fa-google"></i>
-              Sign In with Google
-            </button>-->
-          </div>
+          <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
           <div id="profile-menu" class="profile-menu">
-            <img id="profile-icon" src="" alt="Profile"/>
+            <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
-              <a href="/profile"><button>Profile</button></a>
+                <a href="/profile"><button>Profile</button></a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
