profile header aligned

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -107,6 +107,7 @@
   </script>
   <body>
     <main>
+      <p id="output"></p>
       <div class="top">
         <div class="top-left">
           <div id="current-time"></div>
