profile icon phone shrink

--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -181,6 +181,10 @@
         height: 40px;
       }
 
+      .profile-icon{
+        width: 24px;
+      }
+
       .profile-menu img {
         width: 24px;
         height: 24px;
