commented out potential new

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,7 @@
         <a href="/listings">
           <button type="button" class="sell-button" id="postListingsButton">Post Listing</button>
         </a>
+      
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
@@ -105,7 +106,11 @@
       </div>
       <div class="tables-container">
       <table>
-        <caption>Get Swiped In</caption>   
+        <caption>Get Swiped In 
+          <!--<br> <a href="/listings">
+          <button type="button" id="postListingsButton">Add an Offer Listing</button> 
+        </a> -->
+        </caption> 
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
@@ -144,7 +149,10 @@
         </tbody>
       </table>
       <table>
-        <caption>Swipe Someone Else In</caption>
+        <caption>Swipe Someone Else In <!--<br> <a href="/listings">
+          <button type="button" id="postListingsButton">Add a Request Listing</button>
+        </a>-->
+        </caption>
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
