--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -45,7 +45,9 @@
           <a href="https://forms.gle/7M3JpiJ9RoapZmxF6" target="blank" class="feedback">
             Feedback
           </a>
-          <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          <div class="signin-container">
+            <div id="g_id_signin" class="g_id_signin" data-type="standard"></div>
+          </div>
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile" />
             <div id="profile-dropdown" class="profile-dropdown">
