--- a/static/header.css
+++ b/static/header.css
@@ -68,8 +68,9 @@
     display: flex;
     flex-direction: row;
     font-size: 16px;
-    gap: 20px;
-    align-items: center;
+    gap: 10px;
+    height: 40px;
+    justify-content: center;
     position: relative;
   }
   
