--- a/templates/listings.html
+++ b/templates/listings.html
@@ -66,16 +66,12 @@
       <header class="header" id="index-header">
         <a href="/listings">Create a New Listing</a> 
       </header>
-      <section style="max-width: 800px; margin: 20px auto; padding: 20px;">
+      <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
           <form id="listingForm" action="/submit_seller" method="POST">
             <div class="form-group">
               <label>Dining hall:</label>
-              <div class="checkbox-group">
-                <div class="checkbox-item">
-                  <input type="checkbox" id="any" name="dining_hall[]" value="Any">
-                  <label for="any">Any</label>
-                </div>
+              <div class="checkbox-group two-columns">
                 <div class="checkbox-item">
                   <input type="checkbox" id="john_jay" name="dining_hall[]" value="John Jay">
                   <label for="john_jay">John Jay</label>
@@ -120,6 +116,10 @@
                   <input type="checkbox" id="diana" name="dining_hall[]" value="Diana">
                   <label for="diana">Diana</label>
                 </div>
+                <div class="checkbox-item">
+                  <input type="checkbox" id="any" name="dining_hall[]" value="Any">
+                  <label for="any">Any Hall</label>
+                </div>
               </div>
             </div>
             
@@ -128,14 +128,15 @@
               <input type="date" id="date" name="date" required>
             </div>
             
-            <div class="form-group">
-              <label for="start_time">Start:</label>
-              <input type="time" id="start_time" name="start_time" required>
-            </div>
-            
-            <div class="form-group">
-              <label for="end_time">End:</label>
-              <input type="time" id="end_time" name="end_time" required>
+            <div class="form-group time-group">
+              <div class="time-input">
+                <label for="start_time">Start:</label>
+                <input type="time" id="start_time" name="start_time" required>
+              </div>
+              <div class="time-input">
+                <label for="end_time">End:</label>
+                <input type="time" id="end_time" name="end_time" required>
+              </div>
             </div>
             
             <div class="form-group">
@@ -145,7 +146,7 @@
             
             <div class="form-group">
               <label>Payment Methods:</label>
-              <div class="checkbox-group">
+              <div class="checkbox-group two-columns">
                 <div class="checkbox-item">
                   <input type="checkbox" id="venmo" name="payment_methods[]" value="Venmo">
                   <label for="venmo">Venmo</label>
