--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -214,4 +214,27 @@
       .custom-signin-btn i {
         font-size: 14px;
       }
+
+      .time-group {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        align-items: flex-start;
+      }
+
+      .time-input {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 1;
+      }
+
+      .time-input input {
+        width: 100%;
+        margin-top: 4px;
+      }
+
+      .time-input label {
+        margin-bottom: 2px;
+      }
   }
