splitting up post listings button

--- a/templates/buy_listings.html
+++ b/templates/buy_listings.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/listings">Create a New Listing</a> 
+        <a href="/listings">Post a Swipe to Buy</a> 
       </header>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
@@ -202,9 +202,7 @@
             
             <input type="hidden" name="poster_name" id="poster_name" value="">
             <input type="hidden" name="poster_email" id="poster_email" value="">
-            
             <div class="form-group button-group">
-              <button type="submit" class="sell-button" formaction="/submit_seller">Offer to Sell</button>
               <button type="submit" class="buy-button" formaction="/submit_buyer">Offer to Buy</button>
             </div>
           </form>
