--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,11 @@
       </header>
       <div class="subheading">Marketplace for Columbia meal swipe exchanges</div>
       <div class="sell-button-container">
-        <a href="/listings">
-          <button type="button" class="sell-button" id="postListingsButton">Post Listing</button>
+        <a href="/sell_listings">
+          <button type="button" class="sell-button" id="postListingsButton">Sell a Swipe</button>
+        </a>
+        <a href="/buy_listings">
+          <button type="button" class="sell-button" id="postListingsButton">Buy a Swipe</button>
         </a>
       
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
