--- a/templates/buy_listings.html
+++ b/templates/buy_listings.html
@@ -203,7 +203,7 @@
             <input type="hidden" name="poster_name" id="poster_name" value="">
             <input type="hidden" name="poster_email" id="poster_email" value="">
             <div class="form-group button-group">
-              <button type="submit" class="buy-button" formaction="/submit_buyer">Offer to Buy</button>
+              <button type="submit" class="request-button" formaction="/submit_buyer">Offer to Buy</button>
             </div>
           </form>
         </div>
