--- a/templates/sell_listings.html
+++ b/templates/sell_listings.html
@@ -203,7 +203,7 @@
             <input type="hidden" name="poster_name" id="poster_name" value="">
             <input type="hidden" name="poster_email" id="poster_email" value="">
             <div class="form-group button-group">
-              <button type="submit" class="sell-button" formaction="/submit_seller">Offer to Sell</button>
+              <button type="submit" class="offer-button" formaction="/submit_seller">Offer to Sell</button>
             </div>
           </form>
         </div>
