--- a/templates/profile.html
+++ b/templates/profile.html
@@ -182,7 +182,7 @@
     <script src="../static/functions.js" type="text/javascript"></script>
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
-
+    <script>
       document.addEventListener('DOMContentLoaded', function() {
         // Get banned words list from server
         const bannedWords = JSON.parse('{{ banned_words|tojson|safe }}');
