buylistings signin error corrected

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,7 @@
         <a href="/sell_listings">
           <button type="button" class="sell-button" id="postListingsButton">Sell a Swipe</button>
         </a>
-        <a href="/buy_listings">
-          <button type="button" class="sell-button" id="postListingsButton">Buy a Swipe</button>
-        </a>
+        <button type="button" class="buy-button" id="buyListingsButton" onclick="if(requireSignIn(event)) window.location.href='/buy_listings'">Buy a Swipe</button>
         <button type="button" class="how-it-works-button" id="howItWorksButton">How it Works</button>
       </div>
       <div class="how-it-works-popup" id="howItWorksPopup">
@@ -109,9 +107,6 @@
       <div class="tables-container">
       <table>
         <caption>Get Swiped In 
-          <!--<br> <a href="/listings">
-          <button type="button" id="postListingsButton">Add an Offer Listing</button> 
-        </a> -->
         </caption> 
         <thead>
           <tr>
