--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -115,6 +115,8 @@
 
       .offer-button, .request-button {
         font-size: 18px;
+        padding: 6px 12px;
+        background-color: green;
       }
   
       .button-group {
